# we-get

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.rst  changelog.rst  config.cfg  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  main.yml
tests/: fake_shell.py  test_arguments.py  test_core_we_get.py  test_doc.py  test_jacket_rss.py  test_the_pirate_bay.py  test_utils.py
tools/: README.rst.tmpl
we_get/: __init__.py  __main__.py
we_get/core/: __init__.py  commands.py  completer.py  module.py  shell.py  style.py  utils.py  we_get.py
we_get/modules/: 1337x.py  __init__.py  eztv.py  il_corsaro_nero.py  jackett_rss.py  limetorrents.py  rargb.py  the_pirate_bay.py  yts.py
we_get/txt/: useragents.txt
